--- a/globs/background.tex
+++ b/globs/background.tex
@@ -9,9 +9,8 @@ languages. Globbing simplicity is its strength, leading to widespread adoption f
 What began as simple command-line wildcard expansion has evolved into a ubiquitous mini-language with multiple dialects embedded across diverse computational contexts:
 \begin{itemize}
 \item \textbf{Source Control}: Git fundamentally relies on glob patterns in \texttt{.gitignore} files
-\item \textbf{Build Systems}: Tools like Make employ globs for file specification
-\item \textbf{Resource Identification}: Patterns appear in URLs and URIs for hierarchical matching
-\item \textbf{Web Development}: Frameworks like Express.js use glob-like syntax for route definitions
+\item \textbf{Build Systems}: Tools like Make and CI/CD pipelines employ globs for file specification and artifact management
+\item \textbf{Web Development}: Patterns appear in URLs and URIs for hierarchical matching of routes and permissions in web services
 \end{itemize}
 
 However, this proliferation occurred without a unifying standard, resulting in a landscape of incompatible dialects. Implementations that vary in their support for essential 
