--- a/globs/bibliography.bib
+++ b/globs/bibliography.bib
@@ -71,7 +71,7 @@
 }
 
 @misc{globinconsistency,
-    author = {MITRE Corporation},
+    author = {MITRE},
     title = {{CVE-2021-42135}},
     howpublished = {\url{https://www.cve.org/CVERecord?id=CVE-2021-42135}},
     year = {2021}
@@ -142,7 +142,7 @@
 }
 
 @misc{mitre2024top25,
-    author = {MITRE Corporation},
+    author = {MITRE},
     title = {CWE-25: Top 25 Most Dangerous Software Weaknesses},
     year = {2024},
     url = {https://cwe.mitre.org/top25/archive/2024/2024_cwe_top25.html},
