--- a/globs/globs.tex
+++ b/globs/globs.tex
@@ -176,7 +176,7 @@ Through an analysis of $1,966$ open source projects, $1,355$ Github issues, $444
 real-world usage of globs across six common ecosystems that utilize globs. 
 Our findings reveal a stark divide between various globbing implementations and developer adoption. In addition, we document inconsistencies that hinder portability, reliability, 
 and create security flaws. Our analysis reveals that security vulnerabilities are not corner cases, but a dominant concern, comprising almost a quarter of all developer discussions. 
-We propose a path forward through standardization and introduce a formal grammar for \textit{GlobSpec}, a unified specification designed to resolve semantic ambiguities and 
+We propose a path forward through standardization and introduce a formal specification for globs, \textit{GlobSpec}, designed to resolve semantic ambiguities and 
 bridge the expressiveness gap between current implementations and developer requirements.
 \keywords{Globs, Pattern matching, Domain Specific Language, Software engineering}
 % \PACS{PACS code1 \and PACS code2 \and more}
