--- a/globs/intro.tex
+++ b/globs/intro.tex
@@ -23,7 +23,7 @@ light on the gaps and inconsistencies, this study provides a foundation for stan
 \noindent
 The contributions of this paper are as follows:
 \begin{itemize}
-\item We present a new polyglot glob dataset consisting of $62,713$ unique globs extracted from over $1,966$  software projects written in six popular programming languages.
+\item We present a new polyglot glob dataset consisting of $62,713$ unique globs extracted from $1,966$  software projects written in six popular programming languages, alongside a curated corpus of 2,160 developer discussions from GitHub issues, CVE reports, and Stack Overflow, providing comprehensive quantitative and qualitative data for glob ecosystem analysis.
 \item We empirically validate that glob use is widespread, with a core set of shared semantics \emph{but} also expose critical misalignments between language support and developer needs.
 \item We identify a set of common pitfalls, and characterize an emerging form denial-of-service attacks, Glob Denial-of-Service(\gdos), providing a framework for systematic improvement.
 \item We propose and formalize \emph{GlobSpec}, a unified grammar and standard specification that establishes a strong foundation for glob pattern matching, as a path toward resolving the expressiveness and standardization gaps our study uncovered.
