--- a/globs/analysis.tex
+++ b/globs/analysis.tex
@@ -63,15 +63,15 @@ needs or present usability barriers for advanced functionality. Beyond the core 
 \subsection*{\bf RQ2: Do differences in globbing behavior and dialect impact usability/reliability and to what extent? }
 \setcounter{subsection}{0}
 
-The analysis of developer discussions ($2,094$ in total) reveals how glob implementation inconsistencies translate into 
+The analysis of developer discussions ($2,160$ in total) reveals how glob implementation inconsistencies translate into 
 reliability and usability problems, with platform-specific semantic drift emerging as a critical concern. We enumerate the general themes identified in our taxonomy below 
 (\Cref{fig:issue_categories}) and provide more detailed analysis and case studies for the most significant issues.
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=\columnwidth]{issue_categories.pdf}
-    \caption{Distribution of $2,094$ glob-related issues, derived from developer discussions, across six primary categories -- security, features, reliability, usability, 
-    compatibility, performance, and other. \todo{Should sort this from highest to lowest and other as bottom category (maybe in shaded grey) dont color security -- also make sure label does not cover the bars.}}
+    \caption{Distribution of $2,160$ glob-related issues, derived from developer discussions, across six primary categories -- security, features, reliability, usability, 
+    compatibility, performance, and other.}
     \label{fig:issue_categories}
 \end{figure}
 
@@ -82,23 +82,30 @@ performance: $81$ posts ($3.8\%$).
 Language-specific analysis reveals disproportionate friction in certain ecosystems. Go appears in $523$ issue mentions ($24.2\%$ of language references) despite representing 
 only $28.38\%$ of our pattern corpus, indicating significant challenges with its standard library's limited glob support and third-party fragmentation.
 
-Runtime errors \todo{what do we mean by runtime errors -- not a category in the figure?} dominate reliability issues ($183$ posts, $46.7\%$). The high proportion of runtime errors suggests that glob implementations often encounter conditions 
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=\columnwidth]{reliability_usability.pdf}
+    \caption{Breakdown of $491$ reliability and usability issues from developer discussions.}
+    \label{fig:reliability_usability}
+\end{figure}
+
+\Cref{fig:reliability_usability} shows that runtime errors dominate reliability issues ($190$ posts, $48.5\%$). The high proportion of runtime errors suggests that glob implementations often encounter conditions 
 that were not expected by developers, leading to application crashes or unhandled exceptions during file system operations. This pattern indicates potential gaps in error 
 handling robustness across different glob implementations.
 
-The related issue of cross-tool inconsistency ($41$ posts, $10.5\%$) demonstrates how patterns working in one tool fail in another. These cases reveal that developers expect 
+The related issue of cross-tool inconsistency ($40$ posts, $10.2\%$) demonstrates how patterns working in one tool fail in another. These cases reveal that developers expect 
 consistent glob behavior across different tools and libraries, but encounter unexpected differences in pattern matching semantics. The presence of these inconsistencies 
 suggests the lack of standardized behavior for glob implementations causes substantial friction, forcing developers to learn and account for tool-specific variations in their workflows, 
 and inhibits the use of globbing.
 
-Integration problems ($25$ posts, $6.4\%$) occur when glob patterns work in isolation but fail in system contexts. These issues highlight how glob operations are sensitive to 
+Integration problems ($32$ posts, $8.2\%$) occur when glob patterns work in isolation but fail in system contexts. These issues highlight how glob operations are sensitive to 
 their runtime environment, including factors such as current working directory, user permissions, and filesystem state. The recurrence of integration problems suggests that glob 
 patterns may have implicit dependencies on execution context that are not always apparent during development or testing in isolated environments.
 
-Documentation gaps represent a significant usability barrier, comprising $142$ posts ($58.0\%$ of usability issues). Developers consistently report insufficient documentation 
+Documentation gaps represent a significant usability barrier, comprising $64$ posts ($26.1\%$ of usability issues). Developers consistently report insufficient documentation 
 covering edge cases, platform-specific behaviors, and advanced feature usage. 
 
-Syntax confusion and error messages, appearing in $13$ posts ($5.3\%$) and $10$ posts ($4.1\%$) respectively, involve mismatches between developer expectations from shell 
+Syntax confusion and error messages, appearing in $18$ posts ($7.3\%$) and $7$ posts ($2.9\%$) respectively, involve mismatches between developer expectations from shell 
 experience and programmatic glob behavior along with generic error messages making issues difficult to investigate. 
 
 \subsection{Hidden File Handling Complications}
@@ -117,18 +124,22 @@ The problem is particularly acute when recursive globbing interacts with hidden 
 
 Inconsistency across implementations results in the same pattern producing different results across tools. While \texttt{node-glob} and bash correctly match hidden files with recursive 
 wildcards, Node.js's built-in \texttt{fs/promises} glob implementation unexpectedly excludes them. This creates silent failures where deployment scripts work during development with 
-one library but fail (or silently produce different results) when passed to another \todo{do we have an example (or include in the example above?)}.
+one library but fail (or silently produce different results) when passed to another. This creates silent failures where depolyment scripts work during development with one library but fail 
+(or silently produce different results) when passed to another. For example, a deployment script using \texttt{dist/**/*} will match files inside the hidden directory \texttt{dist/.cache} 
+when using node-glob, but silently exclude them when the same pattern is used with Node.js's \texttt{fs/promises} glob. This potentially breaks the deployed application if it depends on 
+cached assets.
 
 Security and reliability are major concerns with the inconsistent behavior around hidden files which often contain important configs information (which should be included) or sensitive 
 forms of data (which must be excluded). Build processes may miss critical configuration files, causing runtime failures. Conversely, when hidden files are unexpectedly included, deployment 
-scripts may expose sensitive files like \texttt{.env} or \texttt{.credentials} containing API keys and database passwords\todo{do we have a CVE or incident report of this?}.
+scripts may expose sensitive files like \texttt{.env} or \texttt{.credentials} containing API keys and database passwords. This vulnerability is documented in CVE-2021-42135, where glob pattern
+ambiguity in HashiCorp Vault's policy system allowed unauthorized access to credential generation endpoints.
 
 The Python ecosystem is another example with divergent behavior between \texttt{glob.glob()} (excludes hidden files by default) and \texttt{pathlib.Path.glob()} (includes them). 
 These inconsistencies cause production incidents where CI environment behavior diverges from development setups, creating unreliable deployments and potential information 
 disclosure vulnerabilities.
 
 \subsection{Platform-Specific Semantic Drift}
-Our data analysis identified $91$ posts ($4.2\%$ of total corpus) explicitly describing cross-platform problems, with platform differences dominating ($45$ posts, $49.5\%$ of compatibility 
+Our data analysis identified $91$ posts ($4.2\%$ of total corpus) explicitly describing compatibility problems, with platform differences dominating ($49$ posts, $53.85\%$ of compatibility 
 issues). 
 
 Case sensitivity mismatches create silent failures when moving between Unix-like systems and Windows. A Stack Overflow question illustrates: "I have files named \texttt{1\_1.txt}, 
@@ -159,7 +170,7 @@ Locale-dependent character classes amplify these issues and create additional pl
 ranges may match letters with diacritics, while C locale (ASCII-only) excludes them. One Bash-focused post describes production incidents where \texttt{rm [a-z]*} deleted files like 
 \texttt{élite.txt} that weren't removed during development.
 
-Finally, version incompatibility ($9$ posts, $9.9\%$ of compatibility issues), describes breaking changes between library versions. A representative case documents Python $3.8$ to $3.10$ 
+Finally, version incompatibility ($7$ posts, $7.69\%$ of compatibility issues), describes breaking changes between library versions. A representative case documents Python $3.8$ to $3.10$ 
 migration where \texttt{glob.glob()} changed default symlink following behavior for security reasons, causing production behavior to differ from development.
 
 The platform-specific semantic drift particularly affects cross-platform development workflows \cite{lingua-franca}, where subtle behavioral differences create bugs that are difficult 
@@ -172,14 +183,14 @@ Our analysis identified $530$ security-related posts from the discourse corpus (
 manifest as actual exploited vulnerabilities as well. \Cref{fig:issue_categories} shows that security issues represent the largest category of developer concerns, underscoring the 
 critical importance of addressing glob-related vulnerabilities in production systems.
 
-Our study reveals a nuanced threat landscape dominated by unauthorized file access, with detailed breakdown shown in \Cref{fig:security_taxonomy}. The security taxonomy, \todo{derived from 
-where?}, demonstrates that glob vulnerabilities extend beyond simple path traversal to encompass sophisticated attack vectors.
+Our study reveals a nuanced threat landscape dominated by unauthorized file access, with detailed breakdown shown in \Cref{fig:security_taxonomy}. The security taxonomy, derived from 
+analysis of our corpus of dataset, demonstrates that glob vulnerabilities extend beyond simple path traversal to encompass sophisticated attack vectors.
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=\columnwidth]{security_taxonomy.pdf}
     \caption{Detailed breakdown of 528 security issues based on analyzed developer discussions, highlighting prevalent vulnerability classes and showing the contribution of glob based 
-    denial-of-service attacks, which represent a emerging threat vector globs are increasingly used in validation checks for URI resource access and API path routing. \todo{Review legend size to make sure fonts are legible.}}
+    denial-of-service attacks, which represent a emerging threat vector globs are increasingly used in validation checks for URI resource access and API path routing.}
     \label{fig:security_taxonomy}
 \end{figure}
 
@@ -372,8 +383,8 @@ particularly affecting recursive operations ($6$ posts at $7.4\%$), highlighting
 The absence of optimization features like directory exclusion, and streaming results forces developers to implement workarounds that often worsen performance through 
 unnecessary traversal and post-processing.
 
-Compatibility issues (88 posts) cover the remaining implementation gaps involve platform-specific differences ($45$ posts), including path separator issues ($17$ posts), and 
-various forms of version incompatibility ($9$ posts).
+% Compatibility issues (88 posts) cover the remaining implementation gaps involve platform-specific differences ($45$ posts), including path separator issues ($17$ posts), and 
+% various forms of version incompatibility ($9$ posts).
 
 % Based on our cross-RQ analysis, we identify four evidence-based improvement priorities:
 
