--- a/globs/globs.tex
+++ b/globs/globs.tex
@@ -152,7 +152,7 @@ literate= {á}{{\'a}}1
 %\authorrunning{Short form of author list} % if too long for running head
 
 \institute{Phyllis Lim \at
-              \email{pli231@uky.edu}
+              \email{phyllis.lim@uky.edu}
             \and
             Connor Adkins \at
               \email{chandon.adkins@uky.edu}
@@ -225,8 +225,8 @@ These findings lay the groundwork for better practices, opportunities for enhanc
 with robust, portable, and reliable capabilities. 
 
 \section*{Data-Availability Statement}
-The data used in this study, including the glob corpus, forum posts, and CVE issues is available via github (\url{xxxx}) as an evolving community data set and as a stable 
-reproduction package at \todo{yyy} (\url{zzz}).
+The data used in this study, including the glob corpus, forum posts, and CVE issues is available via github (\url{https://anonymous.4open.science/r/glob-artifact-AA95}) as an evolving community data set and as a stable 
+reproduction package at Zenodo, (\url{https://doi.org/10.5281/zenodo.18462402}).
 
 %\begin{acknowledgements}
 %If you'd like to thank anyone, place your comments here
