working for submission

--- a/globs/globs.tex
+++ b/globs/globs.tex
@@ -152,12 +152,15 @@ literate= {á}{{\'a}}1
 %\authorrunning{Short form of author list} % if too long for running head
 
 \institute{Phyllis Lim \at
+              Department of Computer Science, University of Kentucky, KY, USA \\
               \email{phyllis.lim@uky.edu}
             \and
             Connor Adkins \at
+              Department of Computer Science, University of Kentucky, KY, USA \\
               \email{chandon.adkins@uky.edu}
             \and
             Mark Marron \at
+              Department of Computer Science, University of Kentucky, KY, USA \\
               \email{mark.marron@uky.edu}
 }
 
@@ -168,7 +171,7 @@ literate= {á}{{\'a}}1
 
 \begin{abstract}
 Glob patterns, a domain-specific language for structured string matching, are a foundational yet understudied component of modern software development embedded in everything 
-from build scripts and configuration files to web server routes. However, this widespread use, rests on a fragile foundation. Despite their ubiquity across operating system tools 
+from build scripts and configuration files to web server routes. However, this widespread use rests on a fragile foundation. Despite their ubiquity across tools 
 and programming languages, a lack of standardization has led to a fragmented ecosystem rife with inconsistent behaviors, security vulnerabilities, and usability pitfalls. 
 This paper presents the first empirical study of the glob ecosystem to quantify these challenges and chart a path toward robust solutions. 
 
@@ -178,7 +181,7 @@ Our findings reveal a stark divide between various globbing implementations and 
 and create security flaws. Our analysis reveals that security vulnerabilities are not corner cases, but a dominant concern, comprising almost a quarter of all developer discussions. 
 We propose a path forward through standardization and introduce a formal specification for globs, \textit{GlobSpec}, designed to resolve semantic ambiguities and 
 bridge the expressiveness gap between current implementations and developer requirements.
-\keywords{Globs, Pattern matching, Domain Specific Language, Software engineering}
+\keywords{Globs, Pattern Matching, Domain Specific Language, Software Engineering}
 % \PACS{PACS code1 \and PACS code2 \and more}
 \subclass{MSC code1 \and MSC code2 \and more}
 \end{abstract}
